--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
         "titleBar.inactiveBackground": "#1c097f99",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#1c097f"
+    "peacock.color": "#1c097f",
+    "liveServer.settings.port": 5501
 }
