--- a/.env.local
+++ b/.env.local
@@ -9,4 +9,4 @@ POSTGRES_DATABASE="verceldb"
 
 # `openssl rand -base64 32`
 AUTH_SECRET=your-secret-key
-AUTH_URL=http://localhost:3000/api/auth
+AUTH_URL=https://next-js-dashboard-ras0d5hgm-em-boonlins-projects.vercel.app
