--- a/.env.local
+++ b/.env.local
@@ -8,5 +8,5 @@ POSTGRES_PASSWORD="utGA3l4TKBCP"
 POSTGRES_DATABASE="verceldb"
 
 # `openssl rand -base64 32`
-AUTH_SECRET=your-secret-key
-AUTH_URL=https://next-js-dashboard-ras0d5hgm-em-boonlins-projects.vercel.app/api/auth
+AUTH_SECRET=54iuj6dk5r7ftk5tlihyihigy78utg8t68t67
+AUTH_URL=https://next-js-dashboard-eight-psi.vercel.app/
